# homework-agent

./: .env  .env.example  .gitignore  LAMBDA_DEPLOYMENT_GUIDE.md  README.md  activate.sh  clean_db.py  cloudformation-template.json  debug_enhanced.py  debug_scraper.py  deploy-lambda-fixed.sh  deploy-lambda-runner.sh  docker-compose.yml  iam-deployment-policy.json  iam-policy.json  lambda_function.py  main.py  pyproject.toml  remote_debug.py  requirements-lambda-minimal.txt  requirements.txt  run_agent.py  scheduler.py  setup_whatsapp.py  simple_debug.py
agent/: .dockerignore  Dockerfile  agent.py  index.py  llm_handler.py  query_processor.py
client/: README.md  cloudformation-s3-cloudfront.yaml  deploy-s3-cloudfront.sh  package-lock.json  package.json  vite.config.ts
config/: settings.json
data/: homework.db
database/: __init__.py  dynamodb_handler.py
node-scraper/: .dockerignore  Dockerfile  Dockerfile.lambda  LAMBDA_DEPLOYMENT.md  README.md  cloudformation-simple.yaml  cloudformation-template.yaml  deploy-secure.sh  deploy.sh  docker-compose.yml  lambda-handler.js  lambda.js  manual-deploy.sh  package-lock.json  package.json  playwright.config.js  response.json  secrets-manager-policy.json  template.yaml  test-lambda-local.js
node-server/: .dockerignore  Dockerfile  README.md  cloudformation-lambda.yaml  deploy-lambda.sh  package-lock.json  package.json
python-backend/: main.py
scraper/: __init__.py  auth.py  config.py  db.py  dynamodb_handler.py  historical_parser.py  homework_parser.py  lambda_config.py  lambda_runner.py  lambda_runner_fixed.py  (+3 more)
(+50 files in other folders)
