[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homework-agent"
version = "0.1.0"
description = "Private agent to scrape and summarize homework"
authors = [{name="Tsur"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
~